--- a/css/style-min.css
+++ b/css/style-min.css
@@ -1,1 +1,1 @@
-.logo{width:50%}.jumbotron{margin-top:20px;background:url("../img/hero.jpg");height:600px;background-size:contain;background-position:right bottom;background-repeat:no-repeat}.card-deck{margin-top:100px}
+.logo{width:50%}.jumbotron{margin-top:20px;background:url("../img/hero.png");height:600px;background-size:contain;background-position:right bottom;background-repeat:no-repeat}.card-deck{margin-top:100px}
