--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,17 @@
+
 .logo {
     width: 50%;
 }
 
 .jumbotron {
     margin-top: 20px;
-    background: url('../img/hero.jpg');
+    background: url('../img/hero.png');
     height: 600px;
     background-size: contain;
     background-position: right bottom;
     background-repeat: no-repeat;
 }
+
 
 .card-deck {
     margin-top: 100px;
