--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,46 @@
-
 .logo {
     width: 40%;
 }
 
+.nav-item {
+    padding: 10px;
+}
+
 .jumbotron {
-    margin-top: 20px;
-    background: url('../img/hero.png');
-    height: 600px;
-    background-size: contain;
-    background-position: right bottom;
-    background-repeat: no-repeat;
+    background-color: white;
+}
+
+.section-container {
+    padding: 100px 15px;
+}
+
+#about, #form {
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+}
+
+textarea {
+    height: 200px;
 }
 
 
-.card-deck {
-    margin-top: 100px;
+footer {
+    background-color: #333;
+    padding: 15px;
+    color: white;
+}
+
+
+@media only screen and (max-width: 990px) {
+    .media-center {
+        text-align: center;
+        padding-top: 30px;
+    }
+}
+
+@media only screen and (max-width: 624px) { 
+    iframe {
+        width: 340px;
+        height: 189px;
+    }
 }
